--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "mmbc_coming_soon",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
+  },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
